libaedGUI_includedir = $(includedir)/aedGUI
libaedGUI_include_HEADERS = 	aedGui.h \
				aedXmlFile.h \
				aedMenu.h \
				aedMenuBar.h \
				aedRect.h \
				aedColor.h  \
				dllmacros.h \
				drawlibs.h \
				aedObject.h \
				aedWindow.h \
				aedWidget.h \
				aedStaticText.h \
				aedStaticRTF.h \
				aedButton.h \
				aedTextBox.h \
				aedDialogBox.h \
				aedProgressBar.h \
				aedFont.h \
				aedApp.h \
				aedFrame.h \
				aedCheckBox.h \
				aedSignal.h \
				aedCallBack.h \
				aedFunctor1Arg.h \
				aedFunctorBase.h \
				aedFunctorNoArgs.h \
				aedImage.h \
				aedImageBank.h \
				aedSlider.h \
				aedScrollBar.h \
				aedStaticImage.h \
				aedAnimatedImage.h \
				aedTheme.h \
				aedRadioButtonGroup.h \
				aedTimer.h \
				aedListBox.h \
				aedSpinner.h \
				aedCursor.h \
				aedLog.h \
				aedSizer.h \
				aedBoxSizer.h

# rint.h is included in the distribution, but not installed
# and must not be included from any headers which appear in
# libaedGUI_include_HEADERS.
EXTRA_DIST = config.h.in rint.h aedUpdateManager.h
